# glossa

./: .gitignore  AUDIT.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DEPENDENTS.md  README.md  TODO  environment.yml  glossa.code-workspace  pyproject.toml
.claude/: settings.json
.github/ISSUE_TEMPLATE/: general.yml
conda.recipe/: meta.yaml
config/dictionaries/: project.txt  python.txt  tools.txt
config/tools/: black.toml  mypy.ini  pylintrc.ini  pylintrc_tests.ini  releaserc.toml
docs/: Makefile  architecture.md  conf.py  design-plan.md  design-principles.md  index.md
docs/_src/: adapters.md  application.md  conf.py  domain-contracts.md  domain-models.md  domain-rules.md  errors.md  index.md  infrastructure.md  top-level.md
docs/adr/: 0001-architectural-alignment-with-reference-python-analysis-tools.md
docs/api/: adapters.md  application.md  domain-contracts.md  domain-models.md  domain-rules.md  errors.md  index.md  infrastructure.md  top-level.md
docs/guide/: cli-reference.md  configuration.md  docstring-guide.md  getting-started.md  installation.md  rules.md  usage.md
docs/internals/: contracts.md  domain-models.md  error-handling.md  fix-pipeline.md  index.md  pipeline.md  rule-system.md  testing.md
docs/prompts/: design-review.md
src/glossa/: __init__.py  __main__.py  cli.py  errors.py
src/glossa/adapters/: bootstrap.py  cli.py  formatters.py
src/glossa/application/: configuration.py  contracts.py  fixing.py  linting.py  policy.py  protocols.py  registry.py  service.py
src/glossa/application/contracts/: __init__.py  (+3 more)
src/glossa/core/: __init__.py  contracts.py
src/glossa/domain/: fixes.py  models.py  parsing.py  traceability.py
src/glossa/infrastructure/: config.py  discovery.py  extraction.py  files.py  plugins.py
tests/: conftest.py
tests/test_glossa/adapters/: test_bootstrap.py  test_formatters.py
tests/test_glossa/application/: test_configuration.py  test_fixing.py  test_linting.py  test_policy.py
tests/test_glossa/domain/: test_fixes.py  test_parsing.py  test_rules_anti_patterns.py  test_rules_presence.py  test_rules_prose.py  test_rules_structure.py  test_rules_typed_entries.py  test_traceability.py
(+14 files in other folders)
